Stabilization of Android tests for remote env